kubernetes/apps/sgc/idp/authelia/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: sgc
spec:
  forwardAuth:
    address: http://authelia.sgc.svc.cluster.local:9091/api/verify?rd=https://auth.${SECRET_DOMAIN_INTERNAL}/
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Groups
      - Remote-Email
