kubernetes/apps/sgc/idp/authelia/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  annotations:
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: internal
      namespace: network
      kind: Gateway
  hostnames:
    - "authelia.${ROOT_DOMAIN}"
    - "auth.${ROOT_DOMAIN}"
  rules:
    - backendRefs:
        - name: ${APP}
          port: 9091
